--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "Baraneetharan Ramasamy",
   "license": "MIT",
   "dependencies": {
-    "botbuilder": "^4.10.1",
+    "botbuilder": "^3.13.1",
+    "botbuilder-teams": "^0.2.9",
+    "ngrok": "^3.2.7",
     "restify": "^8.5.1"
   },
   "devDependencies": {    
